<resources>
    <string name="app_name">Eventure</string>
    <string name="welcome">Welcome to Eventure</string>
    <string name="eventure_man">It\'s an Eventure, man!</string>

    <string name="facebook_app_id">1167128870029414</string>

    <!--Navigation Strings-->
    <string name="text_my_events">My Events</string>
    <string name="text_events_near_me">Nearby Events</string>
    <string name="text_create_event">Create Events</string>
    <string name="text_my_account">My Account</string>

    <!--Create Event Strings-->
    <string name="text_create_your_event">Create your event&#8230;</string>
    <string name="text_event_name">Name your event&#8230;</string>
    <string name="text_location">Give it a location&#8230;</string>
    <string name="text_date">Pick a Date</string>
    <string name="text_time">Pick a Time</string>
    <string name="text_description">Tell us about your event&#8230;</string>
    <string name="upload_photo">Upload a Photo</string>
    <string name="photo_selected">Photo Selected</string>
    <string name="search">Search</string>
    <string name="select_photo">Select picture</string>

    <string name="text_submit">Submit Event</string>
    <string name="text_please_note">Please note any event you submit here will be public and viewable by all users of Eventure</string>
    <string name="error_date">Please input a date</string>
    <string name="error_time">Please input a time</string>
    <string name="error_name">Invalid Event Name</string>
    <string name="error_date_time">Please input a date / time in the future</string>

    <!--My Account Strings-->
    <string name="text_hello">Hello:</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_switch">Change Theme Color</string>
    <string name="profile_description">Profile picture</string>

    <!--My Event Strings-->
    <string name="no_location_given">No location given</string>
    <string name="cover_description">Image related to event displayed</string>

    <!--Error Strings-->
    <string name="no_internet">No connections available</string>
    <string name="no_location">No location available</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="image_description">Image describing error</string>

    <!--Events Near Me Strings-->
    <string name="loading_message">Finding your location&#8230;</string>
    <string name="error_message">Cannot show Nearby Events until GPS is switched on</string>
    <string name="settings_option">Settings</string>
    <string name="continue_option">Continue</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permissions not granted</string>

    <!--Event Details Strings-->
    <string name="event_photos">Event Photos</string>
    <string name="find_on_map">Find on Map</string>

    <!--Sharing Strings-->
    <string name="share_interested">I think you might be interested in this event!</string>
    <string name="boundary">----------------------</string>
    <string name="share_event_name">Event Name:</string>
    <string name="share_description">Description:</string>
    <string name="share_start_time">Start Time:</string>
    <string name="share_subject">"Event you might be interested in! - Eventure"</string>
    <string name="share_find_out_more">Go to Eventure to find out more!</string>
    <string name="share_via">Share via&#8230;</string>

    <!--Login Activity-->
    <string name="logging_in">Logging in&#8230;</string>

    <string name="menu_view_future_events">View future events</string>
    <string name="menu_view_past_events">View past events</string>
</resources>
