<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_no_internet"
        android:id="@+id/image_view_internet"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:visibility="invisible"/>

    <TextView
        android:text="@string/no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/text_view_no_internet"
        android:textSize="18sp"
        android:layout_below="@+id/image_view_internet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_no_location"
        android:id="@+id/image_view_location"
        android:cropToPadding="false"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:visibility="invisible"/>

    <TextView
        android:text="@string/no_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/text_view_no_location"
        android:textSize="18sp"
        android:layout_below="@+id/image_view_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:visibility="invisible"/>

    <Button
        android:text="@string/tap_to_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:id="@+id/tap_to_retry" />


</RelativeLayout>